# segment-anything-cpp-wrapper

./: CMakeLists.txt  sam.cpp  sam.h  test.cpp
